[package]
name = "stronghold-utils"
version = "1.0.0"
authors = [
  "IOTA Stiftung",
  "tensor-programming <tensordeveloper@gmail.com>"
]
edition = "2021"
license = "Apache-2.0"
description = "Utils for the iota_stronghold library"
homepage = "https://stronghold.docs.iota.org"
repository = "https://github.com/iotaledger/stronghold.rs"

[dependencies]
rand = "0.8.3"

  [dependencies.stronghold-derive]
  path = "../derive"
  version = "1.0.0"
