[package]
name = "vault"
version = "0.1.0"
authors = ["tensor-programming <tensordeveloper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"

serde = {version = "1.0.114", features = ["derive"]}

[dev-dependencies]
json = "0.12"
crypto = {path = "../crypto", version = "0.1"}
random = {path = "../random", version = "0.1"}

[profile.release]
overflow-checks = true

[profile.dev]
overflow-checks = true