[package]
name = "communication-macros"
version = "0.1.1"
authors = [ "IOTA Stiftung" ]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/iotaledger/stronghold.rs"
homepage = "https://stronghold.docs.iota.org"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = [ "parsing", "full", "extra-traits", "proc-macro" ] }
quote = "1.0"
proc-macro2 = "1.0"
