[package]
name = "communication"
version = "0.1.0"
authors = ["Elena Frank <elena.frank@iota.org>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
readme = "README.md"
build = "build.rs"

[dependencies]
async-std = "1.6.2"
async-trait = "0.1.40"
bytes = "0.5.6"
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
futures = "0.3.1"
libp2p = {version = "0.28.1", default-features = false, features = ["dns", "mdns-async-std", "mplex", "noise", "request-response", "tcp-async-std", "yamux", "websocket"]}
prost = {version = "0.6.1", default-features = false, features = ["prost-derive"] }
regex = "1.3.9"
thiserror = "1.0.21"
serde = {version = "1.0.117", features = ["derive"]}

[features]
default = ["mdns"]

mdns = []

[build-dependencies]
prost-build = "0.6.1"
