[package]
name = "new_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zeroize = { version = "1.5.2" }
libsodium-sys = "0.2"
serde = { version = "1.0", features = [ "derive" ] }
rand_ascii = { package = "rand", version = "0.8.4" }

[dependencies.iota-crypto]
version = "0.8.0"
features = [ "random", "chacha", "hmac", "sha", "x25519", "blake2b" ]

